authentification/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-object
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentification
            port:
              number: 8080
      - path: /main
        pathType: Prefix
        backend:
          service:
            name: click-app
            port:
              number: 80
      - path: /style.css
        pathType: Prefix
        backend:
          service:
            name: click-app
            port:
              number: 80
  ingressClassName: nginx
