authentification/ingress_auth.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-auth
spec:
  rules:
  - host: app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentification
            port:
              number: 8080
      - path: /static/style.css
        pathType: Prefix
        backend:
          service:
            name: authentification
            port:
              number: 8080
