authentification/ingress_click.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-click
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: app.com
    http:
      paths:
      - path: /main
        pathType: Prefix
        backend:
          service:
            name: click-app
            port:
              number: 80
      - path: /(.*\.css)
        pathType: Prefix
        backend:
          service:
            name: click-app
            port:
              number: 80
  ingressClassName: nginx
